Resolves: tdf#122611 crash in empty template list

Change-Id: Ifab72f21e92382a3072a35447c6387e1fd405e15